calling api and displaying data from json file both are working